load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.uuid",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        "@boost.assert",
        "@boost.config",
        "@boost.container_hash",
        "@boost.core",
        "@boost.io",
        "@boost.move",
        "@boost.numeric_conversion",
        "@boost.predef",
        "@boost.random",
        "@boost.static_assert",
        "@boost.throw_exception",
        "@boost.tti",
        "@boost.type_traits",
        "@boost.winapi",
    ],
)
